syntax = "proto3";

// Package Discover is used to find other Peers in the sonr network.
package sonrio.motor.discover.v1;
option go_package = "github.com/sonr-io/sonr/internal/motor/x/discover/v1";

// LobbyMessage is message passed from Peer in Lobby
message LobbyMessage {
  sonrio.motor.discover.v1.Peer peer = 1;     // Users Peer Data
  optional string message = 2; // Message to be published
}

// VisibilityRequest is Message for updating Peer Visibility in Exchange
message VisibilityRequest {
  string s_name = 1;        // SName combined with Device ID and Hashed
  bytes public_key = 2;     // Buffer of Public Key
  Visibility visibility = 3; // Visibility

  enum Visibility {
    VISIBILITY_UNSPECIFIED = 0;
    VISIBILITY_AVAILABLE = 1; // Everyone can see this peer
    VISIBILITY_HIDDEN = 2; // Only Linked Devices can see this peer
    VISIBILITY_FRIENDS = 3; // Only Friends can see this peer
  }
}

// VisibilityResponse is response for VisibilityRequest
message VisibilityResponse {
  bool success = 1; // If Request was Successful
  string error = 2; // Error Message if Request was not successful
  Visibility visibility = 3; // Visibility

  enum Visibility {
    VISIBILITY_UNSPECIFIED = 0;
    VISIBILITY_AVAILABLE = 1; // Everyone can see this peer
    VISIBILITY_HIDDEN = 2; // Only Linked Devices can see this peer
    VISIBILITY_FRIENDS = 3; // Only Friends can see this peer
  }
}

// Basic Info Sent to Peers to Establish Connections
message Peer {
    string did = 1;       // User Sonr Domain
    string host_name = 2; // Peer Host Name
    string os = 3;       // Peer Operating System
    string arch = 4;     // Peer Architecture
    string model = 5;    // Peers Device Model
    int64 last_seen = 6; // Last Modified Timestamp
}

// Message Sent when peer messages Lobby
message OnLobbyRefreshResponse {
  string olc = 1;                    // OLC Code of Topic
  repeated sonrio.motor.discover.v1.Peer peers = 2; // User Information
  int64 received = 3;                // Invite received Timestamp
}
